# SnakeMaker

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
SnakeMaker/: __init__.py  defaults.py  snakemaker.py  subject.py  utils.py
SnakeMaker/rule_maker/: rule.py  rule_defaults.py  rule_utils.py  rulemaker.py
SnakeMaker/smkfile_maker/: smkfile_defaults.py  smkfile_maker.py
config/: demo_rule_config.yaml  demo_snakefile_config.yaml  settings.yaml  vars.env
data/input_data/: dataset_description.json
data/input_data/sub-BIOPD01/ses-1/anat/: sub-BIOPD01_ses-1_T1w.json
data/input_data/sub-BIOPD01/ses-1/dwi/: sub-BIOPD01_ses-1_acq-b1000_dir-AP_dwi.json
data/output_data/: Snakemake.smk  dry_run.sh  run.sh
data/output_data/data/base/sub-BIOPD01/ses-1/: b0.json
data/output_data/rules/: rules.smk
data/scripts/: demo_functions.py  move_rule0.sh
docs/: Mynotes.md  mkdocs.yml
docs/docs/: changelog.md  configuration.md  examples.md  index.md  rule_configuration.md  rules.md  snakefile_configuration.md
