[project]
name = "snakemaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.10",
    "mkdocs>=1.6.1",
    "nibabel>=5.3.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pybids>=0.19.0",
    "pytest>=8.3.5",
    "pyyaml==6.0.1",
]
